332 Fixed issue with empty space above project description on mobile

--- a/web/themes/custom/spacebase/css/style.css
+++ b/web/themes/custom/spacebase/css/style.css
@@ -8318,7 +8318,7 @@ body.path-search.topbar-open .main-container {
     width: 260px;
     float: left; } }
 
-@media screen and (min-width: 480px) and (max-width: 980px) {
+@media screen and (min-width: 680px) and (max-width: 980px) {
   .path-search .region-content {
     display: grid;
     grid-template-areas: "top"  "middle"  "main"; }
@@ -10114,6 +10114,9 @@ body.page-node-type-blog-post .text {
 .region-navigation fieldset.form-item {
   display: none; }
 
+.region-content .project-group aside {
+  float: right; }
+
 .region-content .project-group .field--label {
   display: none; }
 
@@ -10126,6 +10129,10 @@ body.page-node-type-blog-post .text {
 .region-content .project-group .box h4 {
   font-size: 16px;
   margin: 1.0em 0 0.5em; }
+
+@media screen and (max-width: 767px) {
+  .region-content .project-group aside {
+    float: none !important; } }
 
 .view-project-aims-current-status .views-row {
   margin-top: 30px; }
