--- a/web/themes/custom/spacebase/scss/_projects.scss
+++ b/web/themes/custom/spacebase/scss/_projects.scss
@@ -1,5 +1,8 @@
 .region-content {
   .project-group {
+    aside {
+      float: right;
+    }
     .field--label {
       display: none;
     }
@@ -14,10 +17,21 @@
         font-size: 16px;
         margin: 1.0em 0 0.5em;
       }
+
     }
-  }
+  
+  } 
 }
 
+ @media screen and (max-width: 767px){
+  .region-content{
+       .project-group {
+        aside {
+          float: none !important;
+        }
+      }
+    }
+  }
 .view-project-aims-current-status {
   .views-row {
     margin-top: 30px;
